--- a/Bookstore/public/templates/index.dust
+++ b/Bookstore/public/templates/index.dust
@@ -1,36 +1,17 @@
 {>"layouts/master" /}
 
 {<body}
-    <div class ="large-3 columns book">
-        <img src ="/img/node1.jpg">
-        <h4>Professional Node.js</h4>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class ="price"> Buy it for <span>$19.99</span></div>
-        <br>
-        <a href="/books/details/1" class="button small">Book Details</a>
-    </div>
-    <div class ="large-3 columns book">
-        <img src ="/img/node2.jpg">
-        <h4>Node.js Blueprints</h4>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class ="price"> Buy it for <span>$9.99</span></div>
-        <br>
-        <a href="/books/details/1" class="button small">Book Details</a>
-    </div>
-    <div class ="large-3 columns book">
-        <img src ="/img/node3.jpg">
-        <h4>Professional Node.js</h4>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class ="price"> Buy it for <span>$10.99</span></div>
-        <br>
-        <a href="/books/details/1" class="button small">Book Details</a>
-    </div>
-    <div class ="large-3 columns book">
-        <img src ="/img/node4.jpg">
-        <h4>Professional Node.js</h4>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class ="price"> Buy it for <span>$12.99</span></div>
-        <br>
-        <a href="/books/details/1" class="button small">Book Details</a>
-    </div>
+
+    {#books}
+        <div class ="large-3 columns book">
+            <img src ="/img/{.cover}">
+            <h4>{.title}</h4>
+            <p>{.trunckedText}</p>
+            <div class ="price"> Buy it for <span>${.price}</span></div>
+            <br>
+            <a href="/books/details/{._id}" class="button small">Book Details</a>
+        </div>
+    {/books}
+
+
 {/body}
