--- a/Bookstore/public/templates/manage/books/index.dust
+++ b/Bookstore/public/templates/manage/books/index.dust
@@ -16,27 +16,15 @@
           </tr>
         </thead>
         <tbody>
+          {#books}
           <tr>
-            <td>1234jh1234hj12389</td>
-            <td>Book Sample</td>
-            <td>Some Category</td>
-            <td><a class="button tiny" href="/manage/books/edit/1">Edit</a></td>
+            <td>{._id}</td>
+            <td>{.title}</td>
+            <td>{.category}</td>
+            <td><a class="button tiny" href="/manage/books/edit/{._id}">Edit</a></td>
             <td><a class="button tiny alert removeBook" href="#">Delete</a></td>
           </tr>
-          <tr>
-            <td>1234jh1234hj12389</td>
-            <td>Book Sample</td>
-            <td>Some Category</td>
-            <td><a class="button tiny" href="/manage/books/edit/1">Edit</a></td>
-            <td><a class="button tiny alert removeBook" href="#">Delete</a></td>
-          </tr>
-          <tr>
-            <td>1234jh1234hj12389</td>
-            <td>Book Sample</td>
-            <td>Some Category</td>
-            <td><a class="button tiny" href="/manage/books/edit/1">Edit</a></td>
-            <td><a class="button tiny alert removeBook" href="#">Delete</a></td>
-          </tr>
+          {/books}
         </tbody>
       </table>
 {/body}
