--- a/Bookstore/public/templates/layouts/manage.dust
+++ b/Bookstore/public/templates/layouts/manage.dust
@@ -36,6 +36,7 @@
     </div>
     <div class="row">
         <div class="larg-12 columns">
+            {messages|s}
             {+body /}
         </div>
     </div>
