--- a/Bookstore/public/templates/layouts/master.dust
+++ b/Bookstore/public/templates/layouts/master.dust
@@ -35,6 +35,7 @@
     </div>
     <div class="row">
         <div class="larg-12 columns">
+            {messages|s}
             {+body /}
         </div>
     </div>
